@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/beanstalkd
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/beanstalkd/ChangeLog,v 1.2 2009/03/02 00:03:41 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/beanstalkd/ChangeLog,v 1.3 2009/03/21 05:40:33 gengor Exp $
+
+*beanstalkd-1.2 (21 Mar 2009)
+
+  21 Mar 2009; Gordon Malm <gengor@gentoo.org> +beanstalkd-1.2.ebuild:
+  Version bump.
 
   02 Mar 2009; Patrick Lauer <patrick@gentoo.org>
   +files/beanstalkd-werror.patch, beanstalkd-1.0.ebuild:
